[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "valueserp-wrapper"
version = "0.0.1"
description = "A simple wrapper for the ValueSERP API."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.3.1",
    "requests>=2.32.4",
]
